# scratch-fop04

./: .gitignore  CMakeLists.txt  README.md  main.cpp  square.cpp
.github/workflows/: cmake-multi-platform.yml
assets/icons/: icon.icns
include/: block.h  block_instance.h  blocks_library.h  canvas.h  category.h  codespace.h  color.h  costume_ui.h  engine.h  execution_context.h  generaldef.h  handleErrors.h  logger.h  menubar.h  saveload.h  sound_ui.h  spritebox.h  ui.h  value.h  workspace.h
resources/: Info.plist.in  scratch.desktop
src/: block.cpp  block_instance.cpp  blocks_library.cpp  canvas.cpp  category.cpp  codespace.cpp  color.cpp  costume_ui.cpp  engine.cpp  execution_context.cpp  logger.cpp  main.cpp  menubar.cpp  saveload.cpp  sound_ui.cpp  spritebox.cpp  tinyfiledialogs.cpp  ui.cpp  value.cpp  workspace.cpp
